--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@
       <version>4.1.3</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/com.relevantcodes/extentreports -->
+    <dependency>
+      <groupId>com.relevantcodes</groupId>
+      <artifactId>extentreports</artifactId>
+      <version>2.41.2</version>
+    </dependency>
 
   </dependencies>
 
